changes to make compatible with 1.16.5 and JDK 11