@@ -7,6 +7,8 @@ import io.github.gonalez.znpcs.npc.NPCType;
 import io.github.gonalez.znpcs.npc.conversation.Conversation;
 import lombok.Getter;
 import lombok.NonNull;
+import lombok.extern.log4j.Log4j;
+import lombok.extern.log4j.Log4j2;
 import lombok.extern.slf4j.Slf4j;
 import me.lidan.zednpc.commands.ZedNpcCommand;
 import me.lidan.zednpc.npc.NPCManager;
@@ -19,9 +21,10 @@ import revxrsal.commands.bukkit.BukkitCommandHandler;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-@Slf4j
+@Log4j2
 public final class ZedNpc extends JavaPlugin {
 
     @Getter
@@ -44,10 +47,10 @@ public final class ZedNpc extends JavaPlugin {
 
     private void registerCommands() {
         commandHandler = BukkitCommandHandler.create(this);
-        commandHandler.getAutoCompleter().registerSuggestion("npc-id", (args, sender, command) -> ConfigurationConstants.NPC_LIST.stream().map(npcModel -> String.valueOf(npcModel.getId())).toList());
+        commandHandler.getAutoCompleter().registerSuggestion("npc-id", (args, sender, command) -> ConfigurationConstants.NPC_LIST.stream().map(npcModel -> String.valueOf(npcModel.getId())).collect(Collectors.toList()));
         commandHandler.getAutoCompleter().registerSuggestion("toggle-settings",(args, sender, command) -> List.of("glow", "holo", "mirror", "look"));
         commandHandler.getAutoCompleter().registerSuggestion("actions",(args, sender, command) -> List.of("cmd", "console", "chat", "message", "server"));
-        commandHandler.getAutoCompleter().registerParameterSuggestions(NPCType.class, (list, commandActor, executableCommand) -> Arrays.stream(NPCType.values()).map(Enum::name).toList());
+        commandHandler.getAutoCompleter().registerParameterSuggestions(NPCType.class, (list, commandActor, executableCommand) -> Arrays.stream(NPCType.values()).map(Enum::name).collect(Collectors.toList()));
         commandHandler.getAutoCompleter().registerSuggestion("action-id", (args, sender, command) -> {
             Player player = Bukkit.getPlayer(sender.getName());
             return npcManager.getActionIndexes(npcManager.getSelectedNpcOf(player));
@@ -70,9 +73,9 @@ public final class ZedNpc extends JavaPlugin {
             return npcManager.getCompletionsForMethod(npc.getNpcPojo().getNpcType(), methodName);
         });
         commandHandler.getAutoCompleter().registerSuggestion("path-name", (args, sender, command) ->
-            Stream.concat(NPCPath.AbstractTypeWriter.getPaths().stream().map(NPCPath.AbstractTypeWriter::getName), Stream.of("clear")).toList()
+            Stream.concat(NPCPath.AbstractTypeWriter.getPaths().stream().map(NPCPath.AbstractTypeWriter::getName), Stream.of("clear")).collect(Collectors.toList())
         );
-        commandHandler.getAutoCompleter().registerSuggestion("conversation-name", (args, sender, command) -> Stream.concat(ConfigurationConstants.NPC_CONVERSATIONS.stream().map(Conversation::getName), Stream.of("clear")).toList());
+        commandHandler.getAutoCompleter().registerSuggestion("conversation-name", (args, sender, command) -> Stream.concat(ConfigurationConstants.NPC_CONVERSATIONS.stream().map(Conversation::getName), Stream.of("clear")).collect(Collectors.toList()));
         commandHandler.register(new ZedNpcCommand());
         commandHandler.registerBrigadier();
     }
